# PQC95

./: README.md  pqc_wordlist_4096.txt
.github/workflows/: pqc-animation.yaml  publish.yml  world-clock.yml
python-pqc-wordlist/: MANIFEST.in  README.md  pyproject.toml
python-pqc-wordlist/pqc_wordlist/: core.py  errors.py
python-pqc-wordlist/test/: test_wordlist.py
wordlist/: pqc_english_wordlist.csv  stats.txt
wordlist/scripts/: checksum.py
